Setting text-size-adjust to attempt to avoid font resizing on mobile devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,9 @@ body {
     font-size: 14px;
     margin: 0;
     padding: 0 20px 0 20px;
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
 }
 
 .page {
